Giraph Change Log

Release 0.2.0 - unreleased
  
  GIRAPH-219: pom in giraph-formats-contrib should have groupId 'org.apache.giraph'.
  (Brian Femiano via jghoman)

  GIRAPH-215: Update site to use Giraph logo and remove 'incubator' text (ekoontz)

  GIRAPH-205: Move Giraph jar to root level of tar.gz. 
  (Roman Shaposhnik via jghoman)
  
  GIRAPH-206: Break out SimpleShortestPathVertex. (Eli Reisman via jghoman)

  GIRAPH-210: Hadoop 1.0 profile has no activation. (jghoman)
 
  GIRAPH-192: Move aggregators to a separate sub-package. 
  (Jan van der Lugt via jghoman)
  
  GIRAPH-208: LocalTestMode's zookeeper directory is not being cleaned up 
  after job runs (ekoontz)

  GIRAPH-194: Fix up URLs in the pom. (omalley)

  GIRAPH-153: HBase/Accumulo Input and Output formats. (bfem via aching)

  GIRAPH-187: SequenceFileVertexInputFormat has WritableComparable<I>
  as a bounded type for I. (roman4asf via aching)

  GIRAPH-20: Move temporary test files from the project directory. (ssc)

  GIRAPH-37: Implement Netty-backed IPC. (aching)

  GIRAPH-184: Upgrade to junit4. (Devaraj K via jghoman)

  GIRAPH-176: BasicRPCCommunications has unnecessary cast of Vertex.
  (Devaraj K via jghoman)

  GIRAPH-175: Replace manual array copy to utility method call.
  (Devaraj K via jghoman)

  GIRAPH-181: Add Hadoop 1.0 profile to pom.xml. (ekoontz via aching)

  GIRAPH-183: Add Claudio's FOSDEM presentation (slides and video) 
  to the site. (claudio)

  GIRAPH-179: BspServiceMaster's PathFilter can be simplified.
  (Devaraj K via jghoman)

  GIRAPH-177: SimplePageRankVertex has two redundant casts.
  (Devaraj K via jghoman)

  GIRAPH-168: Simplify munge directive usage with new munge flag
  HADOOP_SECURE (rather than HADOOP_FACEBOOK) and remove usage of
  HADOOP (ekoontz via aching).

  GIRAPH-85: Simplify return expression in 
  RPCCommunications::getRPCProxy (Eli Reisman via jghoman)

  GIRAPH-171: Total time in MasterThread.run() is calculated
  incorrectly (ekoontz via aching).